# gettingStartWithQtQuick

./: CMakeLists.txt  LICENSE  README.md  instance.qrc
src/: main.cpp
src/FileMgr/: FileMgr.cpp  FileMgr.h
src/QML/: Viewer.qml  main.qml
